Added Recover Username and Reset Password system

--- a/loginAndRegister.html
+++ b/loginAndRegister.html
@@ -118,8 +118,8 @@
             <div class="panel-heading">Reset Password</div>
             <div id="resetPasswordPanel"  class="panel-body">
               <div class="form-group">
-                <label for="resetPasswordInput">Reset Password:</label>
-                <input type="password" class="form-control" id="resetPasswordInput">
+                <label for="resetPasswordInput">Enter Username:</label>
+                <input type="text" class="form-control" id="resetPasswordInput">
                 <div id="resetPasswordFeedback"></div>
               </div>
               <button class="btn btn-primary" type="submit" id="resetPasswordButton">Reset</button>
