Tidied up files and fixed warnings

--- a/account.html
+++ b/account.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="Group Project Assignment" content="">
-    <meta name="gttg22" content="">
+    <meta name="6System7" content="">
 
     <title>SCRUM - Food sharing app</title>
 
@@ -65,7 +65,7 @@
             <li class="active"><a href="account.html">Account Settings</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li><a id="navbarUsername" href="loginAndRegister.html"></a></li>
+            <li><a id="navBarUsername" href="loginAndRegister.html"></a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
