--- a/findfood.html
+++ b/findfood.html
@@ -78,7 +78,7 @@
             <li><a href="account.html">Account Settings</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li><a id="navbarUsername" href="loginAndRegister.html"></a></li>
+                <li><a id="navBarUsername" href="loginAndRegister.html"></a></li>
             </ul>
           </div>
       </div>
