--- a/home.html
+++ b/home.html
@@ -63,7 +63,7 @@
 
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li><a id="navbarUsername" href="loginAndRegister.html"></a></li>
+            <li><a id="navBarUsername" href="loginAndRegister.html"></a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
