--- a/loginAndRegister.html
+++ b/loginAndRegister.html
@@ -65,7 +65,7 @@
             <li><a href="account.html">Account Settings</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li><a id="navbarUsername" href="loginAndRegister.html"></a></li>
+            <li><a id="navBarUsername" href="loginAndRegister.html"></a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
