--- a/findfood.html
+++ b/findfood.html
@@ -12,7 +12,8 @@
 
     <!-- Bootstrap core CSS -->
     <link href="/css/bootstrap.min.css" rel="stylesheet">
-    <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+
 
     <!-- Custom styles for this template -->
     <link href="/css/scrumFormat.css" rel="stylesheet">
@@ -143,9 +144,9 @@
                     </div>
                     <div id="collapseMealType" class="panel-collapse collapse">
                         <div class="panel-body">
-                            <label class="checkbox-inline"><input type="checkbox" value="">Breakfast</label>
-                            <label class="checkbox-inline"><input type="checkbox" value="">Lunch</label>
-                            <label class="checkbox-inline"><input type="checkbox" value="">Dinner</label>
+                            <label class="checkbox-inline"><input type="checkbox" name="breakfast" value="">Breakfast</label>
+                            <label class="checkbox-inline"><input type="checkbox" name ="lunch" value="">Lunch</label>
+                            <label class="checkbox-inline"><input type="checkbox" name ="dinner" value="">Dinner</label>
                         </div>
                     </div>
                 </div>
@@ -252,6 +253,23 @@
                         </div>
                     </div>
              </div>
+             <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h4 class="panel-title">
+                            <a data-toggle="collapse" href="#collapseDietryRequirements">
+                                Dietry Requirements
+                            </a>
+                        </h4>
+                    </div>
+                    <div id="collapseDietryRequirements" class="panel-collapse collapse">
+                        <div class="panel-body">
+                            <label class="checkbox-inline"><input type="checkbox" value="">Gluten-free</label>
+                            <label class="checkbox-inline"><input type="checkbox" value="">Vegan</label>
+                            <label class="checkbox-inline"><input type="checkbox" value="">Nut-free</label>
+                            <label class="checkbox-inline"><input type="checkbox" value="">Vegetarian</label>
+                        </div>
+                    </div>
+             </div>
 
 
 
@@ -264,6 +282,8 @@
             <div class="w3-container w3-center">
             <h4> Norway Image </h4>
               <p>The Troll's tongue in Hardanger, Norway</p>
+               <p class="card-text"><small class="text-muted"> <i>Username</i></small></p>
+
             </div>
           </div>
           <br>
@@ -274,6 +294,7 @@
             <div class="w3-container w3-center">
             <h4> Norway Image </h4>
               <p>The Troll's tongue in Hardanger, Norway</p>
+              <p class="card-text"><small class="text-muted"> <i>Username</i></small></p>
             </div>
           </div>
           <br>
@@ -284,6 +305,7 @@
             <div class="w3-container w3-center">
             <h4> Norway Image </h4>
               <p>The Troll's tongue in Hardanger, Norway</p>
+              <p class="card-text"><small class="text-muted"> <i>Username</i></small></p>
             </div>
           </div>
           <br>
