Locked pages to users that aren't logged in (except login and home page)

--- a/findfood.html
+++ b/findfood.html
@@ -32,7 +32,7 @@
 
     </head>
 
-
+  <body onload="redirectCheck()">
   <body>
     <!--Bootstrap Navigation Bar-->
     <nav class="navbar navbar-inverse navbar-fixed-top" id="navbar">
