--- a/home.html
+++ b/home.html
@@ -20,6 +20,7 @@
     <script type="text/javascript" src="globalFunctions.js"></script>
      </head>
 
+  <body onload="authKeyCheck()">
   <body>  
     <!--Bootstrap Navigation Bar-->
     <nav class="navbar navbar-inverse navbar-fixed-top" id="navbar">
