--- a/loginAndRegister.html
+++ b/loginAndRegister.html
@@ -22,6 +22,7 @@
     <script type="text/javascript" src="globalFunctions.js"></script>
   </head>
 
+  <body onload="authKeyCheck()">
   <body>
       
     <!--Bootstrap Navigation Bar-->
