--- a/postManagement.html
+++ b/postManagement.html
@@ -19,7 +19,7 @@
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script type="text/javascript" src="globalFunctions.js"></script>
      </head>
-
+  <body onload="redirectCheck()">
   <body>
     <!--Bootstrap Navigation Bar-->
     <nav class="navbar navbar-inverse navbar-fixed-top" id="navbar">
