--- a/account.html
+++ b/account.html
@@ -21,7 +21,7 @@
     <script type="text/javascript" src="globalFunctions.js"></script>
 
   </head>
-  <body onload="redirectCheck()">
+  <body onload="redirectCheck()"></body>
   <body>
       
     <!--Bootstrap Navigation Bar-->
