--- a/loginAndRegister.html
+++ b/loginAndRegister.html
@@ -22,7 +22,7 @@
     <script type="text/javascript" src="globalFunctions.js"></script>
   </head>
 
-  <body onload="authKeyCheck()">
+  <body onload="authKeyCheck()"></body>
   <body>
       
     <!--Bootstrap Navigation Bar-->
