--- a/404.html
+++ b/404.html
@@ -19,7 +19,7 @@
 
   </head>
 
-  <body onload="authKeyCheck()">
+  <body onload="authKeyCheck()"></body>
   <body>
 
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
