--- a/findfood.html
+++ b/findfood.html
@@ -33,7 +33,7 @@
 
     </head>
 
-  <body onload="redirectCheck()">
+  <body onload="redirectCheck()"></body>
   <body>
     <!--Bootstrap Navigation Bar-->
     <nav class="navbar navbar-inverse navbar-fixed-top" id="navbar">
