--- a/postfood.html
+++ b/postfood.html
@@ -40,7 +40,7 @@
         }
     </style>
 </head>
-<body onload="redirectCheck()">
+<body onload="redirectCheck()"></body>
 <body>
     <!--Bootstrap Navigation Bar-->
     <nav class="navbar navbar-inverse navbar-fixed-top" id="navbar">
