--- a/404.html
+++ b/404.html
@@ -9,10 +9,12 @@
     <meta name="6System7" content="">
 
     <title>SCRUM - Food sharing app</title>
-
+    <!-- jQuery -->
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <!-- Bootstrap core CSS -->
     <link href="/css/bootstrap.min.css" rel="stylesheet">
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
     <!-- Custom styles for this template -->
     <link href="/css/scrumFormat.css" rel="stylesheet">
@@ -20,9 +22,6 @@
   </head>
 
   <body>
-
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-
     <!--Bootstrap Navigation Bar-->
         <nav class="navbar navbar-inverse navbar-fixed-top" id="navbar">
       <div class="container">
@@ -40,16 +39,16 @@
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
               <li class="dropdown dropdown-notifications" >
-                <!--Todo: want to make it pull left. --> 
-            <a href="#notifications-panel" class="dropdown-toggle" data-toggle = "dropdown" id = "notificationsButton"> 
+                <!--Todo: want to make it pull left. -->
+            <a href="#notifications-panel" class="dropdown-toggle" data-toggle = "dropdown" id = "notificationsButton">
             <i data-count = "2" class="glyphicon glyphicon-bell"></i>
               <!--<i data-count="2" class="glyphicon glyphicon-comment "></i>-->
             </a>
-                
+
               <ul class = "dropdown-menu" id = "notificationsPanel">
                 <div class="container" id = "allNotifs">
-                  <h3>Notifications</h3> 
-                    
+                  <h3>Notifications</h3>
+
                     <div class="panel-group" id ="groupNotifPanels">
                     <!-- where the notifications will be put -->
                     <ul class = "list-unstyled" id = "notificationList">
