Fixed navbar bug and moved custom CSS files

--- a/pages/findfood.html
+++ b/pages/findfood.html
@@ -14,17 +14,15 @@
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <!-- Bootstrap core CSS -->
     <link href="/css/bootstrap.min.css" rel="stylesheet">
+    <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
 
     <!-- Custom styles for this template -->
-    <link href="/css/scrumFormat.css" rel="stylesheet">
-    <link href="/css/findFoodCSSTest.css" rel="stylesheet">
+    <link href="scrumFormat.css" rel="stylesheet">
+    <link href="findFoodCSSTest.css" rel="stylesheet">
 
-
-    <!-- Bootstrap core JS -->
-    <script src="/js/bootstrap.min.js"></script>
 </head>
 
 <body>
@@ -302,6 +300,8 @@
         <!-- Third column end-->
 
     </div>
+    <!-- Bootstrap core JS -->
+    <script src="/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="findFoodTwo.js"></script>
     <script type="text/javascript" src="globalFunctions.js"></script>
 </body>
