--- a/pages/postfood.html
+++ b/pages/postfood.html
@@ -18,11 +18,9 @@
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <!-- Custom styles for this template -->
-    <link href="/css/scrumFormat.css" rel="stylesheet">
+    <link href="scrumFormat.css" rel="stylesheet">
     <!-- Map for location selection -->
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCW6XlFsL0Ik5e5xDECavIvI24400NMx2g"></script>
-    <!-- Bootstrap core JS -->
-    <script src="/js/bootstrap.min.js"></script>
     <!-- Additional CSS -->
     <style type="text/css">
         #imgPreview {
@@ -195,6 +193,8 @@
         </form>
     </div>
     <!-- /.container -->
+    <!-- Bootstrap core JS -->
+    <script src="/js/bootstrap.min.js"></script>
     <!-- Our own JS -->
     <script type="text/javascript" src="postfood.js"></script>
     <script type="text/javascript" src="globalFunctions.js"></script>
