--- a/pages/home.html
+++ b/pages/home.html
@@ -14,27 +14,29 @@
     <!-- Bootstrap core CSS -->
     <link href="/css/bootstrap.min.css" rel="stylesheet">
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <!--TODO Check if any other bootstrap js scripts are using cdn-->
+    <script src="/js/bootstrap.min.js"></script>
     <!-- Custom styles for this template -->
-    <link href="/css/scrumFormat.css" rel="stylesheet">
+    <link href="scrumFormat.css" rel="stylesheet">
      </head>
 
   <body>
     <!--Bootstrap Navigation Bar-->
     <nav class="navbar navbar-inverse navbar-fixed-top" id="navbar">
+      <!--id="navbar"-->
       <div class="container">
         <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbarContent" aria-expanded="false" aria-controls="navbarContent">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-            <a id = "navbarheader" class="navbar-brand" href="">
+            <a id = "navbar-header" class="navbar-brand" href="">
                 <img id="navbar-logo" src = "possibleLogo.png">
             </a>
         </div>
-        <div id="navbar" class="collapse navbar-collapse">
+        <div id="navbarContent" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
 
             <li class="dropdown dropdown-notifications" >
@@ -104,7 +106,6 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="globalFunctions.js"></script>
     <script type="text/javascript" src="dataAnalysis.js"></script>
