Official stats structure added

--- a/pages/home.html
+++ b/pages/home.html
@@ -96,7 +96,7 @@
     <script type="text/javascript">
 
         $(document).on('click', '#loadStatsButton', function(){
-            getStatsByUser("JCJordan");
+            loadStats();
         });
 
     </script>
