--- a/pages/findfood.html
+++ b/pages/findfood.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="Group Project Assignment" content="">
-    <meta name="gttg22" content="">
+    <meta name="6system7" content="">
 
     <title>SCRUM - Food sharing app</title>
     <!-- jQuery -->
@@ -66,7 +66,7 @@
                         <li><a href="home.html">Home</a></li>
                         <li><a href="postManagement.html">Manage Posts</a></li>
                         <li class="active"><a href="findfood.html">Find Food</a></li>
-                        <li><a href="loginAndRegister.html">Login & Register</a></li>
+                        <li><a href="loginAndRegister.html">Login &amp; Register</a></li>
                         <li><a href="account.html">Account Settings</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
@@ -225,7 +225,7 @@
                             <label class = "checkbox-inline"><input type="checkbox" value="collection">Collection only</label>
                         <br/>
                             <label class = "checkbox-inline"><input type="checkbox" value="business">Business</label>
-                      
+
                            <!-- <label class="checkbox-inline"><input type="checkbox" value="">Yes</label>
                             <label class="checkbox-inline"><input type="checkbox" value="">No</label>
                         </div>
