--- a/pages/postfood.html
+++ b/pages/postfood.html
@@ -115,9 +115,9 @@
                         <input type="file" name="img" class="form-control" accept="image/jpg, image/jpeg, image/png" id="txtImg">
                         <img id="imgPreview" src="" alt="">
                     </div>
-                    <input type="checkbox" name="collection" id="chkCollectionOnly">Collection only</input>
+                    <label class="checkbox-inline"><input type="checkbox" name="collection" id="chkCollectionOnly">Collection only</label>
                     <br/>
-                    <input type="checkbox" name="business" id="chkBusiness">Business</input>
+                    <label class="checkbox-inline"><input type="checkbox" name="business" id="chkBusiness">Business</label>
                     <br/>
                 </div>
                 <div class="col-md-4">
